<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    android:padding="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/tvAtvm" />

    <EditText
        android:id="@+id/edAtvmNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvHintAtvm" >

        <requestFocus />
    </EditText>
    </LinearLayout>
     <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/tvAmount" />
	<EditText
        android:id="@+id/edAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvHintAmount" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRefill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvRefill" />

    

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCancel" />

</LinearLayout>