<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/newbg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvUpdate" />

   <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvUserName" />

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvHintUserName"
        android:layout_marginTop="10dp" >
        <requestFocus />
    </EditText>

     <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOldPass" />

    <EditText
        android:id="@+id/edOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvHintPass"
        android:layout_marginTop="10dp" >
        <requestFocus />
    </EditText>
	<TextView
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNewPass" />

    <EditText
        android:id="@+id/edNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp" >
    </EditText>
	<TextView
        android:id="@+id/textView4"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvConfirmNewpass" />

    <EditText
        android:id="@+id/edConfirmNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp" >
    </EditText>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_marginTop="10dp"
	    android:gravity="center"
	    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvUpdate" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCancel" />
	</LinearLayout>
</LinearLayout>