<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
	    android:id="@+id/textView1"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="@string/tvDate" />
        
        <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
	    android:id="@+id/textView6"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="@string/tvTicId" />
        
        <TextView
        android:id="@+id/tvTicId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
        
    </LinearLayout>
    
 	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
    <TextView
	    android:id="@+id/textView2"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="@string/tvsrc" />
    
 	<TextView
        android:id="@+id/tvsrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    
	</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 	
	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="@string/tvDestn" />    
   <TextView
        android:id="@+id/tvDestn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
 	</LinearLayout>
 	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 	
	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="@string/tvFair" />    
	<TextView
        android:id="@+id/tvFair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

	</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 	
	<TextView
	    android:id="@+id/textView5"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="@string/tvAdult" />    
	<TextView
        android:id="@+id/tvNop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

	</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 	
	<TextView
	    android:id="@+id/textView7"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="No Of Child" />    
	<TextView
        android:id="@+id/tvNoChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

	</LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 	
	<TextView
	    android:id="@+id/textView22"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="BusNo: " />    
	<TextView
        android:id="@+id/tvBusNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

	</LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 	
	<TextView
	    android:id="@+id/textView11"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:text="SeatNo: " />    
	<TextView
        android:id="@+id/tvSeatNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

	</LinearLayout>
	
</LinearLayout>