<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btncheckTic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/checktic"
            android:text="@string/tvChckTic" />

        <Button
            android:id="@+id/btnBookTicket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/bookticket"
            android:text="@string/tvBookTicket" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btnAddBal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/addbal"
            android:text="@string/tvAddBal" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:drawableTop="@drawable/logout"
            android:text="Logout" />
    </LinearLayout>

</LinearLayout>